# AIG_Implementation

./: CMakeLists.txt  README.md  test.py
include/: aig.h
src/: CMakeLists.txt  main.cpp
src/aig/: CMakeLists.txt  aig.cpp
src/ioa/: read_aiger.cpp
src/opt/: CMakeLists.txt
test/: 测试案例说明.txt
test/case_complex/: div.aag  div.txt  mem_ctrl.aag  mem_ctrl.txt
test/case_simple/: 01-adder.aag  01-adder.txt  02-adder.aag  02-adder.txt  s1196.aag  s1196.txt  s1488.aag  s1488.txt  z4ml.aag  z4ml.txt
